# wikipedia2jpdb

./: Cargo.toml  README.org
src/: category.rs  filtering.rs  lib.rs  main.rs  wikipage.rs
tests/: category.rs
