[package]
name = "wikipedia2jpdb"
version = "0.1.0"
edition= "2021"

# Smokeathedefinitiohttps://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wikipedia2jpdb"

[dependencies]
futures = "0.3.25"
inquire = "0.5.2"
mediawiki = "0.2.8"
serde_json = "1.0.89"
tokio = "1.22.0"
scraper= "0.13.0"
itertools= "0.10.5"
regex = "1.7.0"
lazy_static = "1.4.0"

[dev-dependencies]
tokio-test = "0.4.2"
